<resources>
    <string name="app_name">E-Handel</string>
    <string name="loginRegisterUsername">Nombre de usuario</string>
    <string name="loginRegisterPassword">Contraseña</string>
    <string name="forgotPassWordText">¿Has olvidado la contraseña?</string>
    <string name="loginButtonText">Iniciar Sesión</string>
    <string name="loginAdminButtonText">Iniciar Sesión Admin</string>
    <string name="NotRegisterdText">¿No tienes cuenta aún? Registrate</string>
    <string name="IsRegisteredText">¿Ya estas registrado? Inicia Sesion</string>
    <string name="loginRegisterEmail">Correo</string>
    <string name="loginRegisterCountry">País</string>
    <string name="loginRegisterDirection">Direccion</string>
    <string name="loginRegisterPhone">Telefono</string>
    <string name="RegisterButtonText">Registrarse</string>
    <string name="ImAdmin">¿Soy Admin?</string>
    <string name="ImNotAdmin">¿No soy Admin?</string>
    <string name="tvNuevoProductoAdmin">Añadir nuevo producto</string>
    <string name="tvAddProductAdmin">Añadir Producto</string>
    <string name="tvDeleteProduct">Borrar Producto</string>
    <string name="addNewAdmin">Añadir nuevo Admin</string>
    <string name="tvAddClothesAdmin">Añadir Ropa</string>
    <string name="tvAddFoodAdmin">Añadir Comida</string>
    <string name="tvAddFurnitureAdmin">Añadir Muebles</string>
    <string name="tvAddElectronicsAdmin">Añadir Electrónica</string>
    <string name="tvAddNewProductActivity">Añadir nuevo producto</string>
    <string name="tvAddNewProductType">Tipo de Producto: </string>
    <string name="etAddNewProductName">Nombre del producto</string>
    <string name="etAddNewProductVendor">Vendedor</string>
    <string name="etAddNewProductPrice">Precio</string>
    <string name="etAddNewProductQuantity">Cantidad</string>
    <string name="btnAddNewProductText">Añadir Nuevo Producto</string>
    <string name="productImagePopup">¿Elige una opcion para añadir una foto del producto?</string>
    <string name="productImagePopupCamera">Camara</string>
    <string name="productImagePopupGallery">Galería</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_cart">Carrito</string>
    <string name="menu_orders">Ordenes</string>
    <string name="menu_settings">Opciones</string>
    <string name="menu_logout">Cerrar Sesión</string>
    <string name="menu_sellProduct">Vender Producto</string>
    <string name="homeTitle">Inicio</string>
    <string name="toolbar_settings_close_text">Cerrar</string>
    <string name="toolbar_settings_update_text">Actualizar</string>
    <string name="phone_number_hint_etSettingsPhoneNumber">Phone Number...</string>
    <string name="phone_number_hint_etSettingsDirection">Address...</string>
    <string name="phone_number_hint_etSettingsCountry">Country...</string>
    <string name="phone_number_hint_etSettingsPassword">Password...</string>
    <string name="btnSettingsIsVendorFalse">Pulsa aqui para ser vendedor</string>
    <string name="btnSettingsIsVendorTrue">Pulsa aqui para no ser vendedor</string>
    <string name="productDetailActivityCantidad">Cantidad:</string>
    <string name="productDetailActivityType">Tipo:</string>
    <string name="productDetailActivityVendor">Vendedor:</string>
    <string name="productDetailActivityPrice">Precio:</string>
    <string name="btnAddToCart">Añadir al Carrito</string>
    <string name="tvTotalPriceCart">Precio Total:</string>
    <string name="buttonNextCart">Siguiente</string>
    <string name="tvNoProductsInCart">No hay ningún producto en el carrito</string>
    <string name="etConfirmOrderName">Name...</string>
    <string name="etConfirmAddress">Address...</string>
    <string name="etConfirmCityName">City Name...</string>
    <string name="tvNoOrders">No hay ordenes. ¡Compra ya!</string>
    <string name="tvNoPermission">No tienes suficientes permisos para poder vender ningún producto</string>
    <string name="etAddNewProductType">Tipo</string>
    <string name="tituloAcercaDe">Info</string>
    <string name="contenidoAcercaDe">Hecho por: Miguel Rodriguez Hernández y Domenik Jendryewski</string>
    <string name="tituloAppInfo">Información sobre la aplicacion</string>
    <string name="contenidoAppInfo">Esta aplicación consiste en una tienda online de exportación e importación de productos extranjeros, aquí se podrán encontrar produtos de todo tipo y el mismo usuario podrá vender sus productos. Simplifica tus transacciones internacionales y expande tu negocio a nivel global.</string>
</resources>