<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/login">

    <ImageView
        android:id="@+id/register_app_logo"
        android:layout_width="401dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/icono"/>

    <EditText
        android:id="@+id/register_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_app_logo"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:background="#BA000000"
        android:hint="@string/loginRegisterEmail"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:id="@+id/register_username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_email_input"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:background="#BA000000"
        android:hint="@string/loginRegisterUsername"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:inputType="text"
        />
    <EditText
        android:id="@+id/register_country_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_username_input"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:background="#BA000000"
        android:hint="@string/loginRegisterCountry"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:inputType="text"/>

    <EditText
        android:id="@+id/register_direction_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_country_input"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:background="#BA000000"
        android:hint="@string/loginRegisterDirection"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:inputType="textPostalAddress"/>

    <EditText
        android:id="@+id/register_phone_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_direction_input"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:background="#BA000000"
        android:hint="@string/loginRegisterPhone"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:inputType="phone"/>

    <EditText
        android:id="@+id/register_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_phone_input"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:background="#BA000000"
        android:hint="@string/loginRegisterPassword"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_password_input"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/primaryColor"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        android:padding="12dp"
        android:text="@string/RegisterButtonText"/>

    <LinearLayout
        android:id="@+id/linearLayoutIsRegistered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/registerButton"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="20dp">

        <TextView
            android:id="@+id/tvIsRegistered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/IsRegisteredText"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>