<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/login">


    <ImageView
        android:id="@+id/login_app_logo"
        android:layout_width="401dp"
        android:layout_height="230dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/icono"/>

    <EditText
        android:id="@+id/login_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_app_logo"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="15dp"
        android:background="#BA000000"
        android:hint="@string/loginRegisterEmail"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/login_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_email_input"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:background="#BA000000"
        android:hint="@string/loginRegisterPassword"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:inputType="textPassword"/>

    <LinearLayout
        android:id="@+id/linearLayoutForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/login_password_input"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp">

        <LinearLayout
            android:id="@+id/linearLayoutImOrNotAdmin"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_password_input"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvImAdmin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ImAdmin"
                android:textColor="@android:color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/tvImNotAdmin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ImNotAdmin"
                android:textColor="@android:color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                android:visibility="gone"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/forgotPassWordText"
            android:textAlignment="textEnd"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayoutForgotPassword"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/primaryColor"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        android:padding="12dp"
        android:text="@string/loginButtonText"/>

    <LinearLayout
        android:id="@+id/linearLayoutNotRegistered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/loginButton"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp">

        <TextView
            android:id="@+id/tvNotRegistered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/NotRegisterdText"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            android:textStyle="bold" />
    </LinearLayout>



</RelativeLayout>