<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarSettings"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/secondaryColor">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/toolbar_settings_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/toolbar_settings_close_text"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_alignParentStart="true"
                    />

                <TextView
                    android:id="@+id/toolbar_settings_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/toolbar_settings_update_text"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="20dp"
                    />

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/profile_username_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appBarSettings"
        android:text="Username"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/profile_email_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_username_change"
        android:text="Email"
        android:textSize="17dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/etSettingsPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_email_change"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:background="#79000000"
        android:hint="@string/phone_number_hint_etSettingsPhoneNumber"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:inputType="phone"
    />

    <EditText
        android:id="@+id/etSettingsAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etSettingsPhoneNumber"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:background="#79000000"
        android:hint="@string/phone_number_hint_etSettingsDirection"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:id="@+id/etSettingsCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etSettingsAddress"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:background="#79000000"
        android:hint="@string/phone_number_hint_etSettingsCountry"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:inputType="textEmailAddress"
        />

    <Button
        android:id="@+id/btnSettingsIsVendor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etSettingsCountry"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/btnSettingsIsVendorFalse" />

    <EditText
        android:id="@+id/etSettingsPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSettingsIsVendor"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#79000000"
        android:hint="@string/phone_number_hint_etSettingsPassword"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:inputType="textPassword"
        />




    
</RelativeLayout>